syntax = "proto3";

package pointer;

service PointerService {
  rpc CreatePointer(CreatePointerRequest) returns (PointerResponse);
  rpc UpdatePointer(UpdatePointerRequest) returns (PointerResponse);
  rpc GetPointer(GetPointerRequest) returns (PointerResponse);
}

message Pointer {
  optional string name = 1;
  string content = 2;
  optional string address = 3;
  optional uint64 counter = 4;
  optional string cost = 5;
}

message CreatePointerRequest {
  Pointer pointer = 1;
  optional string store_type = 2;
  optional string data_key = 3;
}

message UpdatePointerRequest {
  string address = 1;
  Pointer pointer = 2;
  optional string store_type = 3;
  optional string data_key = 4;
}

message GetPointerRequest {
  string address = 1;
}

message PointerResponse {
  Pointer pointer = 1;
}
