syntax = "proto3";

package public_archive;

service PublicArchiveService {
  rpc CreatePublicArchive(CreatePublicArchiveRequest) returns (PublicArchiveResponse);
  rpc UpdatePublicArchive(UpdatePublicArchiveRequest) returns (PublicArchiveResponse);
  rpc TruncatePublicArchive(TruncatePublicArchiveRequest) returns (PublicArchiveResponse);
  rpc GetPublicArchive(GetPublicArchiveRequest) returns (GetPublicArchiveResponse);
}

message File {
  string name = 1;
  bytes content = 2;
  optional string target_path = 3;
}

message CreatePublicArchiveRequest {
  repeated File files = 1;
  optional string store_type = 2;
}

message UpdatePublicArchiveRequest {
  string address = 1;
  repeated File files = 2;
  optional string store_type = 3;
}

message TruncatePublicArchiveRequest {
  string address = 1;
  string path = 2;
  optional string store_type = 3;
}

message GetPublicArchiveRequest {
  string address = 1;
  string path = 2;
  optional string store_type = 3;
}

message PublicArchiveResponse {
  optional string address = 1;
}

message GetPublicArchiveResponse {
  optional string address = 1;
  repeated string items = 2;
  optional bytes content = 3;
}
